syntax = "proto3";

option csharp_namespace = "Stock.gRPC";

package stock;

service Stock {
    rpc GetById (GetSingleByIdRequest) returns (StockItemReply);
    rpc GetBySymbol (GetBySymbolRequest) returns (StockItemReply);
}

message GetSingleByIdRequest {
    string id = 1;
}

message GetBySymbolRequest {
    string symbol = 1;
}

message StockItemReply {
    string symbol = 1;
}